added price and modified some words here and there

--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Makupaketti - Makulia</title>
+    <title>Soppressata di Gioi - Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/"><!--<img class="img-responsive" src="img/logo-onerow.svg">-->Makulia</a>
+                <a class="navbar-brand" href="/">Makulia</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,9 +58,6 @@
                         <a class="page-scroll" href="#makupaketti">Makupaketti</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#uutiset">Uutiset</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
                     </li>
                 </ul>
@@ -70,127 +67,48 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header class="makupaketti">
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1 id="homeHeading">Makupaketti</h1>
-                <hr>
-                <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
-                <br>
-                <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-    </header>
 
-<!--
-
--->
-<!--
-    <section class="bg-primary" id="makupaketti">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makupaketti</h2>
-                    <hr class="light">
-                    <p class="text-faded">Koe Molempain Sisiliain kuningaskunnan rikas ruokakulttuuri. Kokoamme eteläisen Italian täyteläisiä makuja sesongin mukaan vaihtuvaan Makupakettiin.</p>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
-                </div>
-            </div>
-        </div>
-    </section>
--->
     <section id="makupaketti">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Campanian syksy</h2>
+                <div class="col-md-5 text-center">
+                    <div class="service-box">
+                        <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
+                        <p>Ainesosat</p>
+                        <hr class="primary">
+                        <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
+                    </div>
+                </div>
+                <div class="col-md-7 text-center">
+                    <h2 class="section-heading">Soppressata di Gioi</h2>
                     <hr class="primary">
-                    <p>Tämä Makupaketti tarjoaa pirskahtelevan tummia makuja loppukesän lämmöllä höystettynä.</p>
+                    <p class="lead">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
+                    <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin Cilenton kansallispuistosta Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
+                    <p>Soppressata di Gioi on erinomainen lisä alkupalapöytään. Italiassa ennen ruokaa tarjoillaan monesti aperitivo, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
+                    <p>Piccolo salumificio artigianale valmistaa tuotteensa itse kasvattamistaan sioista. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
                 </div>
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/cacioricotta2.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
-                        <h3>Cacioricotta caprino</h3>
-                        <p class="text-muted">Kevyesti kypsytetty vuohenmaitojuusto</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/pomodorinic-and-bread.jpg" class="img-responsive" alt="Pomodorino Corbarino secco - Aurinkokuivattuja Corbarino-tomaatteja">
-                        <h3>Pomodorino Corbarino secco</h3>
-                        <p class="text-muted">Aurinkokuivattuja Corbarino-tomaatteja oliiviöljyssä</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara">
-                        <h3>Soppressata di Gioi</h3>
-                        <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/colatura.jpg" class="img-responsive" alt="Colatura di Menaica - Sardelleista puristettu kalakastike">
-                        <h3>Colatura di Menaica</h3>
-                        <p class="text-muted">Antiikin ajoista tunnettu kalakastike antamaan merellistä makua ruokiin</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/olioxtrav.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
-                        <h3>Olio extra vergine di oliva</h3>
-                        <p class="text-muted">Kylmäpuristettu neitsytoliiviöljy</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/freselle.jpg" class="img-responsive" alt="Freselle integrale - täysjyväkorppu">
-                        <h3>Freselle integrali</h3>
-                        <p class="text-muted">Puu-uunissa paistettu käsin leivottu täysjyväkorppu</p>
-                    </div>
-                </div>
-                </div>
-            </div>
-        </div>
 
+        <!--
         <div class="container" style="padding-top: 25px">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="primary">
-                    <h2 class="section-heading">69 €</h2>
-                    <p>Toimitettuna kotiovellesi Helsingissä</p>
-                    <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan ja se toimitetaan sinulle lokakuun lopulla.</p>
+                    <p>Makupaketti toimitetaan sinulle lokakuussa Helsinkiin. Valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
                 </div>
             </div>
         </div>
-
+        -->
     </section>
 
 
-    <section class="bg-primary" id="uutiset">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makulian Uutiset</h2>
-                    <hr class="light">
-                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 <!--
         <div class="container">
             <div class="row">
@@ -205,25 +123,26 @@
             </div>
         </div>
     </section>
-
+-->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/cilento.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/cilento.jpg" class="img-responsive" alt="">
+                    <a href="makupaketti" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/antipasto.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Yhdistä
                                 </div>
                                 <div class="project-name">
-                                    Golfo di Policastro, Salerno
+                                    Juuston ja aurinkokuivattujen tomaattien kanssa alkupaloiksi ja nauti tuoreen leivän kera
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+                <!--
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
@@ -299,10 +218,24 @@
                         </div>
                     </a>
                 </div>
+                -->
             </div>
         </div>
     </section>
--->
+
+    <section class="bg-primary" id="uutiset">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Makulian Uutiset</h2>
+                    <hr class="light">
+                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 <!--
     <aside class="bg-dark">
         <div class="container text-center">
