--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/makulia.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,7 +46,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Makulia</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="logo" src="img/logo-onerow.svg" alt="Makulia"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -278,7 +279,7 @@
         <div class="footer">
             <div class="container">
                 <div class="text-center">
-                    <p>Copyright ©Makulia 2017</p>
+                    <p>Copyright <img class="logo" src="img/logo-onerow.svg" alt="Makulia"> 2017</p>
                 </div>
                 <div class="text-center">
                     <p class="text-muted small">
