changed the ordering and delivery time of makupaketti

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -169,7 +169,7 @@
                     <h2 class="section-heading">69 €</h2>
                     <p>Toimitettuna kotiovellesi Helsingissä</p>
                     <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan ja se toimitetaan sinulle lokakuun lopulla.</p>
+                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian syksy -paketti on tilattavissa 26.10. saakka ja se toimitetaan sinulle 10.11. mennessä.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
