--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -72,6 +72,11 @@
     <section id="makupaketti">
         <div class="container">
             <div class="row">
+                <div class="text-center">
+                    <h2 class="section-heading">Soppressata di Gioi</h2>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-5 text-center">
                     <div class="service-box">
                         <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
@@ -82,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 text-center">
-                    <h2 class="section-heading">Soppressata di Gioi</h2>
+                    
                     <hr class="primary">
                     <p class="lead">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
                     <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin Cilenton kansallispuistosta Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
