logo position in makupaketti page

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -46,7 +46,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-left" href="/"><img class="logo" src="img/logo-onerow.svg" alt="Makulia"></a>
+                <a class="navbar-brand" href="/"><img class="logo" src="img/logo-onerow.svg" alt="Makulia"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
