--- a/index.html
+++ b/index.html
@@ -106,22 +106,21 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-md-4 text-center">
                     <div class="service-box">
-
                         <span class="fa fa-4x text-primary icon-kettle-icon sr-icons"></span>
                         <h3>Isompi kattila</h3>
                         <p class="text-muted">Keitä pasta isossa kattilassa runsaassa vedessä, johon on lisätty <i>paljon</i> suolaa.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-md-4 text-center">
                     <div class="service-box">
                         <span class="fa fa-4x icon-garlic-icon text-primary sr-icons"></span>
                         <h3>"Odori" - tuoreena</h3>
                         <p class="text-muted">Valkosipuli toimii herkullisen kastikkeen pohjana ja reilu kimppu tuoreita yrttejä värittää pastan sesongin mukaan.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-md-4 text-center">
                     <div class="service-box">
                         <span class="fa fa-4x icon-secret-ingredient-icon text-primary sr-icons"></span>
                         <h3>Salainen mauste</h3>
