--- a/makupaketti.html
+++ b/makupaketti.html
@@ -104,6 +104,7 @@
     </section>
 -->
     <section id="makupaketti">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -116,6 +117,7 @@
 
         <div class="container">
             <div class="row">
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/cacioricotta2.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
@@ -123,6 +125,7 @@
                         <p class="text-muted">Kevyesti kypsytetty vuohenmaitojuusto</p>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/pomodorinic-and-bread.jpg" class="img-responsive" alt="Pomodorino Corbarino secco - Aurinkokuivattuja Corbarino-tomaatteja">
@@ -130,6 +133,7 @@
                         <p class="text-muted">Aurinkokuivattuja Corbarino-tomaatteja oliiviöljyssä</p>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara">
@@ -137,6 +141,9 @@
                         <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
                     </div>
                 </div>
+                
+                <div class="clearfix"></div>
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/colatura.jpg" class="img-responsive" alt="Colatura di Menaica - Sardelleista puristettu kalakastike">
@@ -144,6 +151,7 @@
                         <p class="text-muted">Antiikin ajoista tunnettu kalakastike antamaan merellistä makua ruokiin</p>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/olioxtrav.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
@@ -151,6 +159,7 @@
                         <p class="text-muted">Kylmäpuristettu neitsytoliiviöljy</p>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <img src="img/products/freselle.jpg" class="img-responsive" alt="Freselle integrale - täysjyväkorppu">
@@ -158,7 +167,7 @@
                         <p class="text-muted">Puu-uunissa paistettu käsin leivottu täysjyväkorppu</p>
                     </div>
                 </div>
-                </div>
+
             </div>
         </div>
 
