--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -72,8 +72,10 @@
     <section id="makupaketti">
         <div class="container">
             <div class="row">
-                <div class="text-center">
+                <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                     <h2 class="section-heading">Soppressata di Gioi</h2>
+                    <hr class="primary">
+                    <p class="product-summary">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
                 </div>
             </div>
             <div class="row">
@@ -86,12 +88,9 @@
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
                     </div>
                 </div>
-                <div class="col-md-7 text-center">
-                    
-                    <hr class="primary">
-                    <p class="lead">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
+                <div class="col-md-6 col-md-offset-1 col-lg-5 col-lg-offset-1 product">
                     <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin Cilenton kansallispuistosta Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
-                    <p>Soppressata di Gioi on erinomainen lisä alkupalapöytään. Italiassa ennen ruokaa tarjoillaan monesti aperitivo, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
+                    <p>Soppressata di Gioi on erinomainen lisä alkupalapöytään. Italiassa ennen ruokaa tarjoillaan monesti antipasto, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
                     <p>Piccolo salumificio artigianale valmistaa tuotteensa itse kasvattamistaan sioista. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
                 </div>
             </div>
