soppressata page and added email logo img

--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -56,7 +56,7 @@
                         <a href="/">Etusivu</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
+                        <a href="makupaketti">Makupaketti</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -73,13 +73,14 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                    <img src="img/products/soppressatadigioi-page.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
                     <h2 class="section-heading">Soppressata di Gioi</h2>
                     <hr class="primary">
                     <p class="product-summary">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-5 text-center">
+            <div class="row"><!-- 
+                <div class="col-md-6 col-md-offset-3 text-center">
                     <div class="service-box">
                         <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
                         <p>Ainesosat</p>
@@ -87,11 +88,38 @@
                         <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
                     </div>
+                </div> -->
+                <div class="col-md-6 col-md-offset-3 product padding-top">
+                    <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin <b>Cilenton kansallispuistosta</b> Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
+                    <p>Soppressata di Gioi on erinomainen lisä <b>alkupalapöytään</b>. Italiassa ennen ruokaa tarjoillaan monesti antipasto, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
+                    <p>Piccolo salumificio artigianale valmistaa tuotteensa <strong>itse kasvattamistaan sioista</strong>. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
+                    <hr class="primary">
                 </div>
-                <div class="col-md-6 col-md-offset-1 col-lg-5 col-lg-offset-1 product">
-                    <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin Cilenton kansallispuistosta Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
-                    <p>Soppressata di Gioi on erinomainen lisä alkupalapöytään. Italiassa ennen ruokaa tarjoillaan monesti antipasto, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
-                    <p>Piccolo salumificio artigianale valmistaa tuotteensa itse kasvattamistaan sioista. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
+                <div class="col-md-6 col-md-offset-3">
+                    <a href="#tuotetiedot" data-toggle="collapse"><h4 class="text-center">Tuotetiedot</h4></a>
+                    <div id="tuotetiedot" class="collapse">
+                        <div class="col-sm-6">
+                            <h5>Ainesosat</h5>
+                            <ul class="list-unstyled">
+                                <li>Sianliha <i>(kinkku)</i>, Italia</li>
+                                <li>Merisuola</li>
+                                <li>Mustapippuri</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6 tuotetiedot">
+                            <h5>Paino</h5>
+                            <p>N. 260 g</p>
+                            <p>Tuotteen paino vaihtelee hieman, sillä se on tehty käsityönä.</p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="col-xs-12">
+                    <hr class="primary">
+                </div>
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
                 </div>
             </div>
         </div>
@@ -131,7 +159,24 @@
 -->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter">
+            <div class="row no-gutter popup-gallery">
+
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/maiali-gioi2.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/maiali-gioi2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Cilenton kansallispuisto
+                                </div>
+                                <div class="project-name">
+                                    Täällä kasvavat Gioin siat
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="col-lg-4 col-sm-6">
                     <a href="makupaketti" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/antipasto.jpg" class="img-responsive" alt="">
@@ -141,43 +186,29 @@
                                     Yhdistä
                                 </div>
                                 <div class="project-name">
-                                    Juuston ja aurinkokuivattujen tomaattien kanssa alkupaloiksi ja nauti tuoreen leivän kera
+                                    Juuston ja aurinkokuivattujen tomaattien kanssa alkupaloiksi, nauti tuoreen leivän kera
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/view-gioi.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/view-gioi.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Cilenton kansallispuisto
+                                </div>
+                                <div class="project-name">
+                                    Näkymä Gioista
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <!--
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Cilento
-                                </div>
-                                <div class="project-name">
-                                    Maanviljelyä kansallispuistossa
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/capicollo.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/capicollo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Cilento
-                                </div>
-                                <div class="project-name">
-                                    Capicollo, porsaan niska
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/carciofini.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/carciofini.jpg" class="img-responsive" alt="">
