tilaa page, modified product page, order links -> removed target blank, solved temporarily the navbar issue of white text

--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -51,7 +51,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right product">
                     <li>
                         <a href="/">Etusivu</a>
                     </li>
@@ -73,22 +73,13 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                    <img src="img/products/soppressatadigioi-page.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
+                    <img src="img/products/soppressatadigioi-page.jpg" class="img-responsive" alt="Kuva: Soppressata di Gioi">
                     <h2 class="section-heading">Soppressata di Gioi</h2>
                     <hr class="primary">
                     <p class="product-summary">Soppressata di Gioi on hieno ilmakuivattu makkara, jonka maku on täyteläisen runsas. Gioin siat kasvavat kastanjapuiden suojissa vuorenrinteellä kävelymatkan päässä kylästä. Jokainen soppressata tehdään täysin käsityönä ilman lisäaineita.</p>
                 </div>
             </div>
-            <div class="row"><!-- 
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <div class="service-box">
-                        <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
-                        <p>Ainesosat</p>
-                        <hr class="primary">
-                        <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
-                    </div>
-                </div> -->
+            <div class="row">
                 <div class="col-md-6 col-md-offset-3 product padding-top">
                     <p>Tämä erikoinen tapa säilöä sianlihaa on peräisin <b>Cilenton kansallispuistosta</b> Gioin kylästä, jossa perinnettä jatketaan yhä. Koko soppressatan pituinen pala rasvaa sian kaulasta pitää kinkun hienoimman vähärasvaisen lihan kuivakypsyttämisestä huolimatta mehevänä. Tavallisen soppressatan valmistuksessa liha pilkotaan makkaraksi rasvoineen päivineen.</p>
                     <p>Soppressata di Gioi on erinomainen lisä <b>alkupalapöytään</b>. Italiassa ennen ruokaa tarjoillaan monesti antipasto, joka koostuu esimerkiksi paksuista juustoviipaleista ja ilmakuivatusta lihasta, kuten soppressata tai prosciutto crudo. Nämä nautitaan usein leivän ja viinin kera.</p>
@@ -119,7 +110,7 @@
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
+                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
                 </div>
             </div>
         </div>
@@ -178,7 +169,7 @@
                 </div>
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="makupaketti" class="portfolio-box">
+                    <a href="img/portfolio/thumbnails/antipasto.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/antipasto.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
