--- a/makupaketti.html
+++ b/makupaketti.html
@@ -77,7 +77,7 @@
                 <h1 id="homeHeading">Makupaketti</h1>
                 <hr>
                 <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
+                <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
                 <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
@@ -141,7 +141,7 @@
                         <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
                     </div>
                 </div>
-                
+
                 <div class="clearfix"></div>
 
                 <div class="col-lg-4 col-md-6 text-center">
@@ -181,7 +181,7 @@
                     <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian syksy -paketti on tilattavissa 26.10. saakka ja se toimitetaan sinulle 10.11. mennessä.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
                 </div>
             </div>
         </div>
