added link to soppressata pagefrom makupaketti page

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -136,9 +136,10 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara">
+                        <a href="/soppressata-di-gioi"><img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara"></a>
                         <h3>Soppressata di Gioi</h3>
                         <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
+                        <a href="/soppressata-di-gioi" class="more-link">Lue lisää...</a>
                     </div>
                 </div>
 
