--- a/makupaketti.html
+++ b/makupaketti.html
@@ -77,7 +77,7 @@
                 <h1 id="homeHeading">Makupaketti</h1>
                 <hr>
                 <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
+                <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a> -->
                 <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
@@ -89,20 +89,19 @@
 <!--
 
 -->
-<!--
-    <section class="bg-primary" id="makupaketti">
+
+    <section class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makupaketti</h2>
+                    <h2 class="section-heading">Kokoamme joulukuun pakettia</h2>
                     <hr class="light">
-                    <p class="text-faded">Koe Molempain Sisiliain kuningaskunnan rikas ruokakulttuuri. Kokoamme eteläisen Italian täyteläisiä makuja sesongin mukaan vaihtuvaan Makupakettiin.</p>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
+                    <p class="text-faded">Seuraava Makupaketti toimitetaan viikolla 50. Se julkaistaan tällä sivulla marraskuun aikana!</p>
                 </div>
             </div>
         </div>
     </section>
--->
+
     <section id="makupaketti">
 
         <div class="container">
@@ -180,10 +179,13 @@
                     <h2 class="section-heading">69 €</h2>
                     <p>Toimitettuna kotiovellesi Helsingissä</p>
                     <hr class="primary">
+                    <p>Kokoamme juuri nyt joulun Makupakettia. Se julkaistaan tällä sivulla marraskuun aikana.</p>
+                    <!--
                     <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian syksy -paketti on tilattavissa 30.10. saakka ja se toimitetaan sinulle 10.11. mennessä.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                     <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    -->
                 </div>
             </div>
         </div>
