changed the oil img to dione img and removed the pay button in order page

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -155,7 +155,7 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/olioxtrav.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
+                        <img src="img/products/dione.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
                         <h3>Olio extra vergine di oliva</h3>
                         <p class="text-muted">Kylmäpuristettu neitsytoliiviöljy</p>
                     </div>
