--- a/tilaa.html
+++ b/tilaa.html
@@ -106,15 +106,19 @@
                         </li>
                     </ul>
                     <h4>Kotiinkuljetus</h4>
-                    <p class="list-unstyled col-xs-11 col-xs-offset-1"><b>Helsinkiin</b> antamaasi osoitteeseen 9.11.2017</p>
+                    <p class="list-unstyled col-xs-11 col-xs-offset-1"><b>Helsinkiin</b> antamaasi osoitteeseen</p>
                 </div>
  
                 <div class="col-xs-12">
                     <hr class="primary">
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
+                    <p>Joulukuun Makupaketti julkaistaan pian. Tilaa alla Makulian Uutiset, niin saat tiedon heti kun Makupaketti on tilattavissa!</p>
+
+                    <!--
                     <p class="product-summary">Verkkokaupassamme on käytössä PayPal. <a href="#ota-yhteytta">Ota yhteyttä</a>, jos tämä maksutapa ei sovi.</p>
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Siirry maksamaan</a>
+                    -->
                 </div>
             </div>
         </div>
